[package]
name = "add_user"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
aws-sdk-kms = "0.24.0"
base64 = "0.21.0"
bigdecimal = { version = "0.3.0", features = ["serde"] }
jsonwebtoken = "8.2.0"
jws = "0.2.7"
lambda_http = "0.7"
lambda_runtime = "0.7"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

